@startuml
    namespace FluxBus.util {

        class ArrivalComparator [[ArrivalComparator.html]] {
            +compare(Busride, Busride): int
        }

        class OriginMatcher [[OriginMatcher.html]] {
            -origin: String
            +OriginMatcher(String)
            +match(Busride): boolean
        }

        java.util.Comparator <|.. ArrivalComparator
        FluxBus.provided.Matcher <|.. OriginMatcher
    }

    namespace java.util {
        interface Comparator<T> {
            {abstract} +compare(T, T): int
            +reversed(): Comparator<T>
            +thenComparing(Comparator<? super T>): Comparator<T>
            +thenComparing(Function<? super T, ? extends U>, Comparator<? super U>): Comparator<T>
            +thenComparing(Function<? super T, ? extends Comparable<? super U>>): Comparator<T>
            +thenComparingInt(ToIntFunction<? super T>): Comparator<T>
            +thenComparingLong(ToLongFunction<? super T>): Comparator<T>
            +thenComparingDouble(ToDoubleFunction<? super T>): Comparator<T>
            {static} +reverseOrder(): Comparator<T extends Comparable<? super T>>
            {static} +naturalOrder(): Comparator<T extends Comparable<? super T>>
            {static} +nullsFirst(Comparator<? super T>): Comparator<T>
            {static} +nullsLast(Comparator<? super T>): Comparator<T>
            {static} +comparing(Function<? super T, ? extends U>, Comparator<? super U>): Comparator<T>
            {static} +comparing(Function<? super T, ? extends Comparable<? super U>>): Comparator<T>
            {static} +comparingInt(ToIntFunction<? super T>): Comparator<T>
            {static} +comparingLong(ToLongFunction<? super T>): Comparator<T>
            {static} +comparingDouble(ToDoubleFunction<? super T>): Comparator<T>
        }
    }

    namespace FluxBus.provided {
        interface Matcher<T> [[../provided/Matcher.html]] {
            {abstract} +match(T): boolean
        }
    }

    center footer UMLDoclet 2.0.12, PlantUML 1.2020.16
@enduml
